--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2"
   }
 }
